kubernetes/apps/kube-system/cilium/policies/allow-authentik-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Authentik internal: all pods in authentik can talk to each other
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-authentik-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: authentik
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
